<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAddAssignment"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/add_course_information" />

        <EditText
            android:id="@+id/assignmentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/assignment_id"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/courseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_id"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/categoryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Category ID"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/maxScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Max score"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/earnedScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Earned score"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Details"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/assignmentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Assignment Date"
            android:inputType="date|textPersonName" />

        <EditText
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Due Date"
            android:inputType="date|textPersonName" />

        <Button
            android:id="@+id/btnAddAssignments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="submit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>